# spin-kv-explorer

./: Makefile  readme.md  spin.toml
.github/workflows/: build.yml  release.yml
env-explorer/: Cargo.toml  Makefile
env-explorer/src/: lib.rs
env-explorer/src/entities/: config.rs  kv.rs  mod.rs
env-explorer/src/handlers/: create_key.rs  delete_key.rs  get_conf_vals.rs  get_env_vars.rs  get_files.rs  get_key.rs  get_list_keys.rs  get_ui.rs  mod.rs
env-explorer/src/models/: config.rs  kv.rs
env-explorer/templates/: index.html
explorer/: Makefile  index.html  main.go
