[package]
name = "env-explorer"
authors = ["Christoph Voigt <voigt.christoph@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
askama = "0.12.1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
http-auth-basic = "0.3.3"
random-string = "1.0.0"
routefinder = "0.5.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }

[workspace]
